--- a/GremsReliquary/pom.xml
+++ b/GremsReliquary/pom.xml
@@ -75,7 +75,7 @@
                         <configuration>
                             <target>
                                 <!-- Change to match your mods name. This moves your mod into a common folder where all mods you make can go. -->
-                                <copy file="target/${project.artifactId}.jar" tofile="${Steam.path}/common/SlayTheSpire/mods/${project.artifactId}.jar"/>
+                                <copy file="target/${project.artifactId}.jar" tofile="${Steam.path}/common/SlayTheSpire - Modding/mods/${project.artifactId}.jar"/>
                                 <!--<copy file="target/GremsReliquary.jar" tofile="../mods/GremsReliquary.jar"/>-->
                             </target>
                         </configuration>
