--- a/GremsReliquary/pom.xml
+++ b/GremsReliquary/pom.xml
@@ -145,7 +145,8 @@
                         <configuration>
                             <target>
                                 <!-- Change to match your mods name. This moves your mod into a common folder where all mods you make can go. -->
-                                <copy file="target/${project.artifactId}.jar" tofile="${Steam.path}/common/SlayTheSpire/mods/${project.artifactId}.jar"/>
+                                <copy file="target/${project.artifactId}.jar"
+                                      tofile="${Steam.path}/common/SlayTheSpire/mods/${project.artifactId}.jar"/>
                                 <!--<copy file="target/DefaultMod.jar" tofile="../mods/DefaultMod.jar"/>-->
                             </target>
                         </configuration>
