Commented out unfunctional relics

--- a/GremsReliquary/pom.xml
+++ b/GremsReliquary/pom.xml
@@ -74,6 +74,26 @@
 
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>ModTheSpire.json</exclude>
+                    <exclude>**/*.xcf</exclude>
+                    <exclude>**/*.ase</exclude>
+                    <exclude>**/*.psd</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>ModTheSpire.json</include>
+                </includes>
+            </resource>
+        </resources>
+
         <finalName>GremsReliquary</finalName>
         <plugins>
             <plugin>
